// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`users.update > functionality > name is changed 1`] = `
{
  "updated": {
    "users": {
      "id:4f1e728c-b564-4fa7-8cc3-3238d7f0d7dd": {
        "name": "Jackie Lowe",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`users.update > functionality > public name is changed 1`] = `
{
  "updated": {
    "users": {
      "id:ca976ae3-f286-42ab-a838-775f3ad4d079": {
        "publicName": "Jill Corkery",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`users.update > functionality > public name is changed to undefined 1`] = `
{
  "updated": {
    "users": {
      "id:c89787ef-4fa0-4af5-8747-4306982172bf": {
        "publicName": null,
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;
